extensions/slider: Set width/height for div to prevent flicker

--- a/www/extensions/slider/slider.css
+++ b/www/extensions/slider/slider.css
@@ -7,7 +7,3 @@
 	top: 0px;
 	left: 0px;
 }
-
-.slider img:first-child {
-	position: relative;
-}
